--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="libs/gsap/ScrollTrigger.min.js" defer></script>
 	<script src="libs/gsap/ScrollSmoother.min.js" defer></script>
 
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="ready-html/css/main.css">
 	<script src="js/app.js" defer></script>
 
 </head>
@@ -22,7 +22,7 @@
 		<div class="content">
 
 			<header class="hero-section">
-				<img data-speed=".6" class="hero" src="img/hero.png" alt="Alt" >
+				<img data-speed=".6" class="hero" src="ready-html/img/hero.png" alt="Alt" >
 				<div class="container">
 					<div data-speed=".75" class="main-header">
 						<h1 class="main-title">creative scroll</h1>
@@ -36,15 +36,15 @@
 	
 						<div data-speed=".9" class="gallery__left">
 		
-							<img class="gallery__item" src="img/work/1.jpg" alt="Alt">
-							<img class="gallery__item" src="img/work/2.jpg" alt="Alt">
+							<img class="gallery__item" src="ready-html/img/work/1.jpg" alt="Alt">
+							<img class="gallery__item" src="ready-html/img/work/2.jpg" alt="Alt">
 		
 							<div class="text-block gallery__item">
 								<h2 class="text-block__h">Creative floating scroll with amazing parallax effect</h2>
 								<p class="text-block__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor amount scrolling.</p>
 							</div>
 		
-							<img class="gallery__item" src="img/work/6.jpg" alt="Alt">
+							<img class="gallery__item" src="ready-html/img/work/6.jpg" alt="Alt">
 		
 						</div>
 
@@ -55,9 +55,9 @@
 								<p class="text-block__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor amount scrolling.</p>
 							</div>
 		
-							<img class="gallery__item" src="img/work/4.jpg" alt="Alt">
-							<img class="gallery__item" src="img/work/5.jpg" alt="Alt">
-							<img class="gallery__item" src="img/work/3.jpg" alt="Alt">
+							<img class="gallery__item" src="ready-html/img/work/4.jpg" alt="Alt">
+							<img class="gallery__item" src="ready-html/img/work/5.jpg" alt="Alt">
+							<img class="gallery__item" src="iready-html/mg/work/3.jpg" alt="Alt">
 		
 						</div>
 
