--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 	<title>Document</title>
 
-	<script src="libs/gsap/gsap.min.js" defer></script>
-	<script src="libs/gsap/ScrollTrigger.min.js" defer></script>
-	<script src="libs/gsap/ScrollSmoother.min.js" defer></script>
+	<script src="ready-html/libs/gsap/gsap.min.js" defer></script>
+	<script src="ready-html/libs/gsap/ScrollTrigger.min.js" defer></script>
+	<script src="ready-html/libs/gsap/ScrollSmoother.min.js" defer></script>
 
 	<link rel="stylesheet" href="ready-html/css/main.css">
-	<script src="js/app.js" defer></script>
+	<script src="ready-html/js/app.js" defer></script>
 
 </head>
 <body>
@@ -57,7 +57,7 @@
 		
 							<img class="gallery__item" src="ready-html/img/work/4.jpg" alt="Alt">
 							<img class="gallery__item" src="ready-html/img/work/5.jpg" alt="Alt">
-							<img class="gallery__item" src="iready-html/mg/work/3.jpg" alt="Alt">
+							<img class="gallery__item" src="ready-html/img/work/3.jpg" alt="Alt">
 		
 						</div>
 
